[Daniel Villanueva][Proyect_ETL]

--- a/data cleaning/data cleaning-checkpoint.ipynb
+++ b/data cleaning/data cleaning-checkpoint.ipynb
@@ -3891,7 +3891,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "bd6f30d3",
+   "id": "71e9375f",
    "metadata": {},
    "outputs": [
     {
@@ -3940,7 +3940,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "44c99d3d",
+   "id": "e4e69d74",
    "metadata": {},
    "outputs": [
     {
@@ -3968,7 +3968,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "ad893595",
+   "id": "fc79fe5f",
    "metadata": {},
    "outputs": [
     {
@@ -3991,7 +3991,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "2ec24486",
+   "id": "fe9d20bd",
    "metadata": {},
    "outputs": [
     {
@@ -4017,7 +4017,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "0837bfa5",
+   "id": "ebc6e73e",
    "metadata": {},
    "outputs": [
     {
@@ -4038,7 +4038,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "04a1f8a9",
+   "id": "28f2ff6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4048,7 +4048,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "3248e419",
+   "id": "1fe5a6f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4058,7 +4058,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "27c58282",
+   "id": "24d1f1a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4068,7 +4068,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "23fdd368",
+   "id": "4b613cff",
    "metadata": {},
    "outputs": [
     {
@@ -4088,8 +4088,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 123,
+   "id": "55d6af08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['admin', 'config', 'labmongo', 'local', 'mydatabase']"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.list_database_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a138ea42",
+   "id": "1f2ae17c",
    "metadata": {},
    "outputs": [],
    "source": []
